--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    font-family: 'Quattrocento Sans', sans-serif;
 }
 
 
@@ -18,6 +20,7 @@ img{
     max-width: 100%;
     border-radius: 5rem;
 }
+
 
 
 
@@ -383,5 +386,7 @@ footer a:hover{
 }
 
 
-
+footer h3{
+    font-family: 'Rubik Bubbles', sans-serif;
+}
 
