--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,5 +7,5 @@
 @import "./pages/menu";
 @import "./pages/sucursales";
 @import "./pages/contacto";
-@import "./pages/pedidos.scss";
+@import "./pages/pedidos";
 
