--- a/css/styles.css
+++ b/css/styles.css
@@ -133,12 +133,25 @@ header nav ul {
   }
 }
 
-/* Portada index */
 .portada-index {
   background-color: rgb(197, 168, 128);
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+.portada-index img {
+  object-fit: cover;
+  padding: 1rem;
+  place-self: center;
+  border-radius: 5rem;
+}
+.portada-index h1 {
+  color: black;
+  text-align: center;
+  align-self: center;
+  padding: 1rem;
+  font-size: 3rem;
 }
 @media (min-width: 768px) {
   .portada-index {
@@ -146,20 +159,6 @@ header nav ul {
     flex-direction: row;
     justify-content: space-around;
   }
-}
-
-.img1 {
-  object-fit: cover;
-  padding: 1rem;
-  place-self: center;
-}
-
-h1 {
-  color: black;
-  text-align: center;
-  align-self: center;
-  padding: 1rem;
-  font-size: 3rem;
 }
 
 .somos-index {
@@ -178,10 +177,22 @@ h1 {
     grid-template-columns: 1fr 1fr;
     grid-row-gap: 1rem;
     grid-column-gap: 1rem;
+    justify-items: center;
   }
 }
-
-.texto-index {
+.somos-index h2 {
+  font-size: 2rem;
+}
+@media (min-width: 768px) {
+  .somos-index h2 {
+    grid-column: span 2;
+    text-align: center;
+  }
+}
+.somos-index .img2 {
+  padding: 2rem;
+}
+.somos-index .texto-index {
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -191,31 +202,18 @@ h1 {
   word-spacing: 10px;
 }
 @media (min-width: 768px) {
-  .texto-index {
+  .somos-index .texto-index {
     padding: 3rem;
     font-size: 1.5rem;
     text-align: start;
   }
 }
 
-h2 {
-  font-size: 2rem;
-}
-@media (min-width: 768px) {
-  h2 {
-    grid-column: span 2;
-    text-align: center;
-  }
-}
-
-.img2 {
-  padding: 2rem;
-  place-self: center;
-}
-
 h1 {
   background-color: rgb(197, 168, 128);
   padding: 1rem;
+  text-align: center;
+  font-size: 3rem;
 }
 
 .clasicas {
@@ -224,22 +222,23 @@ h1 {
 .clasicas a:hover {
   scale: 1.1;
 }
-
-.titulo-clasicas {
+.clasicas .titulo-clasicas {
   padding: 1rem;
   display: flex;
   justify-content: center;
 }
-
-.contenedor-clasicas {
+.clasicas .contenedor-clasicas {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1.5rem;
   gap: 2rem;
 }
+.clasicas .contenedor-clasicas img {
+  border-radius: 5rem;
+}
 @media (min-width: 768px) {
-  .contenedor-clasicas {
+  .clasicas .contenedor-clasicas {
     display: grid;
     justify-items: center;
     grid-template-columns: repeat(2, 1fr);
@@ -247,9 +246,17 @@ h1 {
   }
 }
 @media (min-width: 1024px) {
-  .contenedor-clasicas {
-    grid-template-columns: repeat(3, 1fr);
+  .clasicas .contenedor-clasicas {
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
+  }
+  .clasicas .contenedor-clasicas .imagen-clasica {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    object-fit: fill;
+    object-fit: cover;
   }
 }
 
@@ -259,22 +266,23 @@ h1 {
 .especiales a:hover {
   scale: 1.1;
 }
-
-.titulo-especiales {
+.especiales .titulo-especiales {
   padding: 1rem;
   display: flex;
   justify-content: center;
 }
-
-.contenedor-especiales {
+.especiales .contenedor-especiales {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1.5rem;
   gap: 2rem;
 }
+.especiales .contenedor-especiales img {
+  border-radius: 5rem;
+}
 @media (min-width: 768px) {
-  .contenedor-especiales {
+  .especiales .contenedor-especiales {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -292,6 +300,9 @@ h1 {
 .vegetarianas a:hover {
   scale: 1.1;
 }
+.vegetarianas img {
+  border-radius: 5rem;
+}
 
 .acompañamientos {
   background-color: rgb(83, 46, 28);
@@ -299,28 +310,84 @@ h1 {
 .acompañamientos a:hover {
   scale: 1.1;
 }
-
-.titulo-acompañamientos {
+.acompañamientos .titulo-acompañamientos {
   padding: 1rem;
   display: flex;
   justify-content: center;
 }
-
-.contenedor-acompañamientos {
+.acompañamientos .contenedor-acompañamientos {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
   gap: 2rem;
 }
+.acompañamientos .contenedor-acompañamientos img {
+  border-radius: 5rem;
+}
 @media (min-width: 768px) {
-  .contenedor-acompañamientos {
+  .acompañamientos .contenedor-acompañamientos {
     display: flex;
     flex-direction: row;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     justify-content: center;
   }
+}
+
+.contenedor-sucursales {
+  background-color: rgb(148, 98, 28);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.contenedor-sucursales .sucursal5 {
+  max-width: 100%;
+}
+.contenedor-sucursales .iframe-sucursal {
+  max-width: 100%;
+}
+@media (min-width: 768px) {
+  .contenedor-sucursales {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    overflow: auto;
+    padding: 3rem;
+    gap: 2rem;
+  }
+  .contenedor-sucursales .sucursal5 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+}
+@media (min-width: 1024px) {
+  .contenedor-sucursales {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  .contenedor-sucursales .sucursal5 {
+    grid-column-start: 1;
+    grid-column-end: 5;
+  }
+}
+
+.sucursal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.sucursal5 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
 .contenedor {
