--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -1,31 +1,31 @@
 
-/* Portada index */
-
 .portada-index {
     background-color: $c-brown1;
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
 
-    @include MQ-tablet{
+    & img {
+        object-fit: cover;
+        padding: 1rem;
+        place-self: center;
+        border-radius: 5rem;
+    }
+
+    & h1 {
+        color: $c-black;
+        text-align: center;
+        align-self: center;
+        padding: 1rem;
+        font-size: 3rem;
+    }
+
+    @include MQ-tablet {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
     }
-}
-
-.img1 {
-    object-fit: cover;
-    padding: 1rem;
-    place-self: center;
-}
-
-h1 {
-    color: $c-black;
-    text-align: center;
-    align-self: center;
-    padding: 1rem;
-    font-size: 3rem;
 }
 
 .somos-index {
@@ -37,41 +37,41 @@ h1 {
     gap: 1rem;
     align-items: center;
 
-    @include MQ-tablet{
+    @include MQ-tablet {
         display: grid;
         grid-template-rows: 50px 1fr;
         grid-template-columns: 1fr 1fr;
         grid-row-gap: 1rem;
         grid-column-gap: 1rem;
+        justify-items: center;
     }
-}
 
-.texto-index {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    text-indent: 30px;
-    text-shadow: 10px 10px 10px $c-black;
-    word-spacing: 10px;
+    & h2 {
+        font-size: 2rem;
 
-    @include MQ-tablet{
-        padding: 3rem;
-        font-size: 1.5rem;
-        text-align: start;
+        @include MQ-tablet {
+            grid-column: span 2;
+            text-align: center;
+        }
     }
-}
 
-h2 {
-    font-size: 2rem;
+    & .img2 {
+        padding: 2rem;
+    }
 
-    @include MQ-tablet{
-        grid-column: span 2;
+    & .texto-index {
+        display: flex;
+        flex-direction: column;
         text-align: center;
-    }
-}
+        align-items: center;
+        text-indent: 30px;
+        text-shadow: 10px 10px 10px $c-black;
+        word-spacing: 10px;
 
-.img2{
-    padding: 2rem;
-    place-self: center;
+        @include MQ-tablet {
+            padding: 3rem;
+            font-size: 1.5rem;
+            text-align: start;
+        }
+    }
 }
