--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -1,74 +1,93 @@
-
-h1{
+h1 {
     background-color: $c-brown1;
     padding: 1rem;
+    text-align: center;
+    font-size: 3rem;
 }
 
-.clasicas{
+.clasicas {
     background-color: $c-brown2;
 
-    & a:hover{
+    & a:hover {
         scale: 1.1;
     }
-}
-.titulo-clasicas{
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-}
 
-
-.contenedor-clasicas{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-    padding: 1.5rem;
-    gap: 2rem;
-
-    @include MQ-tablet{
-        display: grid;
-        justify-items:  center;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-    }
-
-    @include MQ-desktop{
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-    }
-}
-
-.especiales{
-    background-color: $c-brown3;
-
-    & a:hover{
-        scale: 1.1;
-    }
-}
-
-.titulo-especiales{
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-}
-
-.contenedor-especiales{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    padding: 1.5rem;
-    gap: 2rem;
-
-    @include MQ-tablet{
+    & .titulo-clasicas {
+        padding: 1rem;
         display: flex;
-        flex-direction: row;
         justify-content: center;
     }
+
+    & .contenedor-clasicas {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        padding: 1.5rem;
+        gap: 2rem;
+
+        & img{
+            border-radius: 5rem;
+        }
+
+        @include MQ-tablet {
+            display: grid;
+            justify-items: center;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+        }
+
+        @include MQ-desktop {
+            grid-template-columns: repeat(4, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+
+            & .imagen-clasica{
+                grid-column-start: 1;
+                grid-column-end: 3;
+                grid-row-start: 1;
+                grid-row-end: 3;
+                object-fit: fill;
+                object-fit: cover;
+                }
+            }
+        }
+    }
+
+
+.especiales {
+    background-color: $c-brown3;
+
+    & a:hover {
+        scale: 1.1;
+    }
+
+    & .titulo-especiales {
+        padding: 1rem;
+        display: flex;
+        justify-content: center;
+    }
+
+    & .contenedor-especiales {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        padding: 1.5rem;
+        gap: 2rem;
+
+        & img{
+            border-radius: 5rem;
+        }
+
+        @include MQ-tablet {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+    }
 }
 
-.vegetarianas{
+.vegetarianas {
     background-color: $c-brown4;
     display: flex;
     flex-direction: column;
@@ -76,37 +95,45 @@ h1{
     padding: 1rem;
     gap: 2rem;
 
-    & a:hover{
+    & a:hover {
         scale: 1.1;
+    }
+
+    & img{
+        border-radius: 5rem;
     }
 }
 
-.acompañamientos{
+.acompañamientos {
     background-color: $c-brown5;
 
-    & a:hover{
+    & a:hover {
         scale: 1.1;
     }
-}
 
-.titulo-acompañamientos{
-    padding: 1rem;
-    display: flex;
-    justify-content: center;
-}
-
-.contenedor-acompañamientos{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-    gap: 2rem;
-
-    @include MQ-tablet{
+    & .titulo-acompañamientos {
+        padding: 1rem;
         display: flex;
-        flex-direction: row;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 1fr);
         justify-content: center;
+    }
+
+    & .contenedor-acompañamientos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+        gap: 2rem;
+
+        & img{
+            border-radius: 5rem;
+        }
+
+        @include MQ-tablet {
+            display: flex;
+            flex-direction: row;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            justify-content: center;
+        }
     }
 }
