--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ img {
   background-color: white;
   color: black;
   transition-duration: 0.6s;
+  cursor: pointer;
 }
 
 footer {
@@ -395,8 +396,7 @@ h1 {
   min-height: 60vh;
   padding: 2rem;
 }
-
-.wrapper-formulario {
+.contenedor .wrapper-formulario {
   border: 3px solid black;
   padding: 1rem;
   width: 80%;
@@ -404,18 +404,18 @@ h1 {
   border-radius: 30px;
 }
 @media (min-width: 768px) {
-  .wrapper-formulario {
+  .contenedor .wrapper-formulario {
     overflow: hidden;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 0;
   }
 }
-.wrapper-formulario img {
+.contenedor img {
   display: none;
 }
 @media (min-width: 768px) {
-  .wrapper-formulario img {
+  .contenedor img {
     display: block;
     object-fit: fill;
     object-fit: cover;
@@ -423,37 +423,80 @@ h1 {
     border-right: 3px solid black;
   }
 }
-
-.formulario {
+.contenedor .formulario {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
 }
 @media (min-width: 1024px) {
-  .formulario {
+  .contenedor .formulario {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 1rem;
     gap: 2rem;
     align-items: start;
   }
-  .formulario .formulario__btn {
+  .contenedor .formulario .formulario__btn {
     grid-column: span 2;
     justify-self: center;
   }
 }
-.formulario__input {
+.contenedor .formulario__input {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
 }
-.formulario__text-area {
+.contenedor .formulario__text-area {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+}
+
+.contenedor-pedidos {
+  background-color: rgb(148, 98, 28);
+  min-height: 80vh;
+  padding: 2rem;
+}
+.contenedor-pedidos a:hover {
+  scale: 1.1;
+}
+.contenedor-pedidos .wrapper-pedidos {
+  border: 3px solid black;
+  padding: 1rem;
+  width: 80%;
+  margin: auto;
+  border-radius: 30px;
+}
+@media (min-width: 768px) {
+  .contenedor-pedidos .wrapper-pedidos {
+    display: grid;
+    padding: 0;
+    overflow: hidden;
+  }
+}
+.contenedor-pedidos .wrapper-pedidos .pedidos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+}
+@media (min-width: 768px) {
+  .contenedor-pedidos .wrapper-pedidos .pedidos {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    gap: 2rem;
+  }
+}
+@media (min-width: 1024px) {
+  .contenedor-pedidos .wrapper-pedidos .pedidos {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
