--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -59,5 +59,6 @@ img{
         background-color: white;
         color: black;
         transition-duration: 0.6s;
+        cursor: pointer;
     }
 }
