--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -1,31 +1,27 @@
-
-
-.contenedor{
+.contenedor {
     background-color: $c-brown3;
     min-height: 60vh;
     padding: 2rem;
-}
 
-.wrapper-formulario{
-    border: 3px solid $c-black;
-    padding: 1rem;
-    width: 80%;
-    margin: auto;
-    border-radius: 30px;
-    
+    & .wrapper-formulario {
+        border: 3px solid $c-black;
+        padding: 1rem;
+        width: 80%;
+        margin: auto;
+        border-radius: 30px;
 
-    @include MQ-tablet{
-        overflow: hidden;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        padding: 0;
+        @include MQ-tablet {
+            overflow: hidden;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            padding: 0;
+        }
     }
 
-
-    & img{
+    & img {
         display: none;
 
-        @include MQ-tablet{
+        @include MQ-tablet {
             display: block;
             object-fit: fill;
             object-fit: cover;
@@ -33,40 +29,38 @@
             border-right: 3px solid $c-black;
         }
     }
-}
 
-.formulario{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
+    & .formulario {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
 
-    @include MQ-desktop{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        padding: 1rem;
-        gap: 2rem;
-        align-items: start;
+        @include MQ-desktop {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            padding: 1rem;
+            gap: 2rem;
+            align-items: start;
 
-        & .formulario__btn{
-            grid-column: span 2;
-            justify-self: center;
+            & .formulario__btn {
+                grid-column: span 2;
+                justify-self: center;
+            }
+        }
+
+        &__input {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
+        }
+
+        &__text-area {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 1rem;
         }
     }
-
-
-    &__input{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-    }
-
-    &__text-area{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-    }
 }
-
