--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ header nav ul {
 }
 
 .somos-index {
-  background-color: rgb(83, 46, 28);
+  background-color: rgb(110, 49, 19);
   color: white;
   display: flex;
   flex-direction: column;
@@ -207,6 +207,35 @@ header nav ul {
     padding: 3rem;
     font-size: 1.5rem;
     text-align: start;
+  }
+}
+
+.franquiciate-index {
+  display: none;
+  background-color: rgb(83, 46, 28);
+  padding: 2rem;
+}
+.franquiciate-index .franquiciate-wrapper {
+  border: 10px solid black;
+  color: white;
+  padding: 5rem;
+  margin: 2rem;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+.franquiciate-index .franquiciate-texto1 {
+  font-size: 50px;
+}
+.franquiciate-index .franquiciate-texto2 {
+  font-size: 100px;
+  font-weight: 1000;
+}
+@media (min-width: 1024px) {
+  .franquiciate-index {
+    display: block;
   }
 }
 
