--- a/sass/pages/_contacto.scss
+++ b/sass/pages/_contacto.scss
@@ -2,6 +2,8 @@
     background-color: $c-brown3;
     min-height: 60vh;
     padding: 2rem;
+    font-weight: bold;
+    font-size: larger;
 
     & .wrapper-formulario {
         border: 3px solid $c-black;
